20071019 Makefile.am,disk/{Makefile.am,beta.[ch],disk.h,wd_fdc.h},event.c,
	 event.h,fuse.c,machines/{pentagon.c,scorpion.c,spec128.c},man/fuse.1,
	 menu.c,menu_data.dat,snapshot.c,tape.c,trdos.[ch],ui/{gtk/gtkui.c,
	 ui.h,win32/{menu_data.[ch],menu_data.rc,win32ui.c}},ui.c,utils.c,
	 widget/menu.c,z80/{coretest.c,z80.c,z80_ops.c}: use new WD FDC code
	 for Beta disk interface emulation (patch #1772618) (Stuart).
20071021 machines/{pentagon.c,scorpion.c,spec128.c,specplus2.c,specplus2a.c,
	 specplus3.c, specplus3e.c}: tidy up a few Valgrind reported errors.
20071021 ay.c: initialise on machine reset (prevents a lot of Valgrind
	 warnings on the 2068 machines).
20071021 disk/{disk.c,plusd.c,wd_fdc.c}: formatting fixes (Stuart).
20071021 disk/{disk.c,fdd.c,wd_fdc.c}: more formatting fixes (Stuart).
20071021 disk/wd_fdc.c: remove fdc_list (part of patch #1779138).
20071021 disk/wd_fdc.c,event.[ch]: add timeout event (part of patch #1779138)
	 (Gergely Szasz).
20071022 Makefile.am,bitmap.h,disk/{disk.c,fdd.c}: add and use bitmap functions
	 for 'clocks' bitmaps (Stuart).
20071022 disk/{disk.c,wd_fdc.c}: remove TR-DOS workaround, fix formatting, add
	 missing prototypes and use functions instead of macros for CRC_ADD and
	 CRC_PRESET (Stuart).
20071022 disk/wd_fdc.c: fix typo (Stuart).
20071022 disk/{beta.c,plusd.c,wd_fdc.c,wd_fdc.h}: rename cmdint to intrq
	 (Stuart).
20071023 event.c: handle EVENT_TYPE_WD_FDC_TIMEOUT in event_name() (Stuart).
20071023 machines/{pentagon.c,scorpion.c}: don't do beta_reset until we've
         initialised the 128 memory system as beta_reset calls
         machine_current->memory_map() (Fred).
20071023 disk/disk.c: fix Gap IV in open_td0() (thanks, Gergely) (Stuart).
20071023 disk/disk.c: tidyup comments (Stuart).
20071023 disk/beta.c: remove redundant step rates (thanks, Gergely) (Stuart).
20071023 disk/wd_fdc.c: add timeout for Read Address command (part of patch
	 #1779138) (Gergely Szasz).