@@ -2190,3 +2190,5 @@
 20071023 disk/beta.c: remove redundant step rates (thanks, Gergely) (Stuart).
 20071023 disk/wd_fdc.c: add timeout for Read Address command (part of patch
 	 #1779138) (Gergely Szasz).
+20071023 z80/{Makefile.am,z80_checks.h,z80_ops.c}: use enumerated feature checks
+	 (patch #1785743) (Stuart).
